test/functions/bradc/useBeforeDef/useBeforeDef2.chpl
proc foo(x: int = y) {
  writeln("x is: ", x);
}

var y: int = 2;

foo();
